tests/diagnostics/file_roles/manifest_declarations/type_declaration/expect.txt
# exit: 1
PACKAGE.coppice:1:6: error: PACKAGE.coppice may only contain exports declarations
  type Token :: struct {
       ^
